--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 			</div>
 			<div class="sq left">
 				<a target="_blank" href="https://hristozafirov.github.io/Wideflash/">
-					<img src="images/Wideflash.png" />
+					<img src="images/Wideflash2.png" />
 					<h2> Wideflash </h2>
 				</a>
 			</div>
 			<div class="sq left">
 				<a target="_blank" href="https://hristozafirov.github.io/Menu-Design/">
-					<img src="images/Menu.png" />
+					<img src="images/Menu2.png" />
 					<h2> Menu </h2>
 				</a>
 			</div>
@@ -192,7 +192,7 @@
 			</div>
 			<div class="sq left">
 				<a target="_blank" href="https://hristozafirov.github.io/Andre/">
-					<img src="images/Andre.png" />
+					<img src="images/Andre2.png" />
 					<h2> Andre </h2>
 				</a>
 			</div>
