--- a/index.html
+++ b/index.html
@@ -148,63 +148,53 @@
 	<div id="pinPoint-3" class="layer-5">
 		<h1>PORTFOLIO</h1>
 		<div class="portfolio">
-			<div class="sq left">
+			<div class="sq left orange">
 				<a target="_blank" href="https://hristozafirov.github.io/HZ-Project/">
-					<img src="images/HZ.png" />
-					<h2> project <br /> HZ </h2>
+					<h2> project HZ </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left teal">
 				<a target="_blank" href="https://hristozafirov.github.io/Eldridge/">
-					<img src="images/eldridge.png" />
 					<h2> Eldridge </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left coral">
 				<a target="_blank" href="https://hristozafirov.github.io/Tahan-project/">
-					<img src="images/tahan.png" />
-					<h2> Бориславски <br /> тахан </h2>
+					<h2> Бориславски тахан </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left purple">
 				<a target="_blank" href="https://hristozafirov.github.io/Wideflash/">
-					<img src="images/Wideflash2.png" />
 					<h2> Wideflash </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left grey">
 				<a target="_blank" href="https://hristozafirov.github.io/Menu-Design/">
-					<img src="images/Menu2.png" />
 					<h2> Menu </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left pink">
 				<a target="_blank" href="https://hristozafirov.github.io/Ocean-Sky/">
-					<img src="images/oceansky.png" />
 					<h2> Ocean Sky </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left yellowgreen">
 				<a target="_blank" href="https://hristozafirov.github.io/Felicity/">
-					<img src="images/felicity.png" />
 					<h2> Felicity </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left dodgerblue">
 				<a target="_blank" href="https://hristozafirov.github.io/Andre/">
-					<img src="images/Andre2.png" />
 					<h2> Andre </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left red">
 				<a target="_blank" href="https://hristozafirov.github.io/Homework-project/">
-					<img src="images/homework.png" />
-					<h2> Homework <br /> project </h2>
+					<h2> Homework project </h2>
 				</a>
 			</div>
-			<div class="sq left">
+			<div class="sq left green">
 				<a target="_blank" href="https://hristozafirov.github.io/MyAnimations-/">
-					<img src="images/myanimations.png" />
 					<h2> My animations </h2>
 				</a>
 			</div>
