Added parallax, improved portfolio layer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</div>
 	
 
-	<div id="pinPoint-1" class="layer-1">
+	<div id="pinPoint-1" class="layer-1 parallax">
 		<h1 class="heading"> HRISTO ZAFIROV </h1>
 		<p class="underheading">JUNIOR CODER, DESIGNER</p>
 
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 
-	<div class="layer-3">
+	<div class="layer-3 parallax">
 		<div id="pinPoint-5"></div>
 		<div class="l3-container">
 			<h1> MY SKILLS </h1>
@@ -141,13 +141,123 @@
 		</div>
 	</div>
 
-	<div id="pinPoint-6" class="layer-4">
+	<div id="pinPoint-6" class="layer-4 parallax">
 		<h1>Simple roadmap for every website</h1>
 	</div>
 
 	<div id="pinPoint-3" class="layer-5">
 		<h1>PORTFOLIO</h1>
+		<h2 class="warning"> Warning! All of my projects are NON-RESPONSIVE and are made for laptop size viewport! </h2>
+
 		<div class="portfolio">
+			<div class="row">
+				<div class="col right">
+					<img src="images/projecthz.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>A project I have made for university purposes, I have trained JavaScript here and although I've learned a lot since then and I would never code it the same way I'm still happy with the results. </p>
+						</div>
+							<h2>Project HZ</h2>
+					</div>
+				</div>
+				<div class="col left">
+					<img src="images/tahan.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>I've made this project to use it some day when my father is ready to publish a website about his business. Uncompleted.</p>
+						</div>
+							<h2>Borislavski Tahan</h2>
+					</div>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="row">
+				<div class="col right">
+					<img src="images/Eldridge.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>This is my first ever one-page design project in which I've included some new 3D stuff which I've learned during it.</p>
+						</div>
+							<h2>Eldridge</h2>
+					</div>
+				</div>
+				<div class="col left">
+					<img src="images/Oceansky.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>My first parallax effect ever, although it's quite simple and really bad coded it still works and I'm proud of it.</p>
+						</div>
+							<h2>OceanSky</h2>
+					</div>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="row">
+				<div class="col right">
+					<img src="images/Menu.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>This is my second one-page design project which is pretty simple, elegant and good looking with overlapping and pseudo elements.</p>
+						</div>
+							<h2>MENU</h2>
+					</div>
+				</div>
+				<div class="col left">
+					<img src="images/Wideflash.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>Now this is a bad coded project that I've made during a course in which I was supposed to teach others what to and not to do. I know it's not working as intended but I've also learned a lesson or two during this project and I'm thankful for that.</p>
+						</div>
+							<h2>Wideflash</h2>
+					</div>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="row">
+				<div class="col right">
+					<img src="images/homework.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>This project I've made for university purposes during my Web programming course in my 2nd bachelor year. The project is a complete mess but it's one of the largest projects I've got.</p>
+						</div>
+							<h2>Homework project</h2>
+					</div>
+				</div>
+				<div class="col left">
+					<img src="images/MyAnimations.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>This is my cheatsheet with some cool (I think) hover effects that I've coded myself and I keep updating it with some new effects from time to time when I get inspired.</p>
+						</div>
+							<h2>My animations</h2>
+					</div>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="row">
+				<div class="col right">
+					<img src="images/Andre.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>My first ever large project which I've made during my "Beginner's PHP & MySQL course" at Plovdiv Academy. During that course I've found out that design and frontend is my thing and although there is no PHP in here I'm proud of this so called "project" mess.</p>
+						</div>
+							<h2>Andre</h2>
+					</div>
+				</div>
+				<div class="col left">
+					<img src="images/Felicity.jpg" />
+					<div class="col-bg">
+						<div>
+							<p>I've got a thing about home design and interior and I've made this project with a lot of passion. I've tried making a pure CSS parallax here for the very first time. And I'm glad it worked in some way.</p>
+						</div>
+						<h2>Felicity</h2>
+					</div>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div class="divider"></div>
+		</div>
+		<!--<div class="portfolio">
 			<div class="sq left orange">
 				<a target="_blank" href="https://hristozafirov.github.io/HZ-Project/">
 					<h2> project HZ </h2>
@@ -200,13 +310,14 @@
 			</div>
 			<div class="clear"></div>
 		</div>
-		<h2 class="warning"> Warning! All of my projects are NON-RESPONSIVE and are made for laptop size viewport! </h2>
+		-->
 	</div>
 
-	<div id="pinPoint-4" class="layer-6">
+	<div id="pinPoint-4" class="layer-6 parallax">
 		<div class="container">
 			<div class="col right">
 				<form>
+					<p class="formWarning"> This is only a design, the form does NOT work!</p>
 					<input type="text" name="" placeholder="First name" />
 					<input type="text" name="" placeholder="Last name" />
 					<input type="text" name="" placeholder="E-mail" />
