--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</div>
 				</div>
 				<div class="col left">
-					<img src="images/tahan.jpg" />
+					<img src="images/tahan2.jpg" />
 					<div class="col-bg">
 						<div>
 							<p>I've made this project to use it some day when my father is ready to publish a website about his business. Uncompleted.</p>
@@ -224,7 +224,7 @@
 					</div>
 				</div>
 				<div class="col left">
-					<img src="images/MyAnimations.jpg" />
+					<img src="images/MyAnimations2.jpg" />
 					<div class="col-bg">
 						<div>
 							<p>This is my cheatsheet with some cool (I think) hover effects that I've coded myself and I keep updating it with some new effects from time to time when I get inspired.</p>
