--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 		<div class="portfolio">
 			<div class="row">
 				<div class="col right">
+					<a target="_blank" href="https://hristozafirov.github.io/HZ-Project/">
 					<img src="images/projecthz.jpg" />
 					<div class="col-bg">
 						<div>
@@ -159,20 +160,24 @@
 						</div>
 							<h2>Project HZ</h2>
 					</div>
+				</a>
 				</div>
 				<div class="col left">
+					<a target="_blank" href="https://hristozafirov.github.io/Tahan-project/">
 					<img src="images/tahan2.jpg" />
 					<div class="col-bg">
 						<div>
-							<p>I've made this project to use it some day when my father is ready to publish a website about his business. Uncompleted.</p>
+							<p>I've made this project to use it some day when my father is ready to publish a website about his business. Incomplete.</p>
 						</div>
 							<h2>Borislavski Tahan</h2>
 					</div>
+				</a>
 				</div>
 				<div class="clear"></div>
 			</div>
 			<div class="row">
 				<div class="col right">
+					<a target="_blank" href="https://hristozafirov.github.io/Eldridge/">
 					<img src="images/Eldridge.jpg" />
 					<div class="col-bg">
 						<div>
@@ -180,8 +185,10 @@
 						</div>
 							<h2>Eldridge</h2>
 					</div>
+				</a>
 				</div>
 				<div class="col left">
+					<a target="_blank" href="https://hristozafirov.github.io/Ocean-Sky/">
 					<img src="images/Oceansky.jpg" />
 					<div class="col-bg">
 						<div>
@@ -189,11 +196,13 @@
 						</div>
 							<h2>OceanSky</h2>
 					</div>
+				</a>
 				</div>
 				<div class="clear"></div>
 			</div>
 			<div class="row">
 				<div class="col right">
+					<a target="_blank" href="https://hristozafirov.github.io/Menu-Design/">
 					<img src="images/Menu.jpg" />
 					<div class="col-bg">
 						<div>
@@ -201,8 +210,10 @@
 						</div>
 							<h2>MENU</h2>
 					</div>
+				</a>
 				</div>
 				<div class="col left">
+					<a target="_blank" href="https://hristozafirov.github.io/Wideflash/">
 					<img src="images/Wideflash.jpg" />
 					<div class="col-bg">
 						<div>
@@ -210,11 +221,13 @@
 						</div>
 							<h2>Wideflash</h2>
 					</div>
+				</a>
 				</div>
 				<div class="clear"></div>
 			</div>
 			<div class="row">
 				<div class="col right">
+					<a target="_blank" href="https://hristozafirov.github.io/Homework-project/">
 					<img src="images/homework.jpg" />
 					<div class="col-bg">
 						<div>
@@ -222,8 +235,10 @@
 						</div>
 							<h2>Homework project</h2>
 					</div>
+				</a>
 				</div>
 				<div class="col left">
+					<a target="_blank" href="https://hristozafirov.github.io/MyAnimations-/">
 					<img src="images/myanimations5.jpg" />
 					<div class="col-bg">
 						<div>
@@ -231,11 +246,13 @@
 						</div>
 							<h2>My animations</h2>
 					</div>
+				</a>
 				</div>
 				<div class="clear"></div>
 			</div>
 			<div class="row">
 				<div class="col right">
+					<a target="_blank" href="https://hristozafirov.github.io/Andre/">
 					<img src="images/Andre.jpg" />
 					<div class="col-bg">
 						<div>
@@ -243,8 +260,10 @@
 						</div>
 							<h2>Andre</h2>
 					</div>
+				</a>
 				</div>
 				<div class="col left">
+					<a target="_blank" href="https://hristozafirov.github.io/Felicity/">
 					<img src="images/Felicity.jpg" />
 					<div class="col-bg">
 						<div>
@@ -252,6 +271,7 @@
 						</div>
 						<h2>Felicity</h2>
 					</div>
+				</a>
 				</div>
 				<div class="clear"></div>
 			</div>
