Added responsive design

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/Styles.css">
 </head>
@@ -335,17 +337,6 @@
 
 	<div id="pinPoint-4" class="layer-6 parallax">
 		<div class="container">
-			<div class="col right">
-				<form>
-					<p class="formWarning"> This is only a design, the form does NOT work!</p>
-					<input type="text" name="" placeholder="First name" />
-					<input type="text" name="" placeholder="Last name" />
-					<input type="text" name="" placeholder="E-mail" />
-					<textarea placeholder="Your message..."></textarea>
-
-					<input type="submit" name="" value="SEND" />
-				</form>
-			</div>
 			<div class="col left">
 				<h2>GET IN TOUCH</h2>
 				<br />
@@ -354,6 +345,18 @@
 				<p class="p2img">Short respond time</p>
 				<p class="p3img">hristoZafirov96@gmail.com</p>
 			</div>
+			<div class="col right">
+				<form>
+					<p class="formWarning">* This is only a design, the form does NOT work!</p>
+					<input type="text" name="" placeholder="First name" />
+					<input type="text" name="" placeholder="Last name" />
+					<input type="text" name="" placeholder="E-mail" />
+					<textarea placeholder="Your message..."></textarea>
+
+					<input type="submit" name="" value="SEND" />
+				</form>
+			</div>
+			
 			<div class="clear"></div>
 		</div>
 	</div>
