Final commit hopefully

--- a/index.html
+++ b/index.html
@@ -143,8 +143,28 @@
 		</div>
 	</div>
 
-	<div id="pinPoint-6" class="layer-4 parallax">
+	<div id="pinPoint-6" class="layer-4">
 		<h1>Simple roadmap for every website</h1>
+		<div class="roadmap">
+				<div class="col left">
+					<div class="pyramid">
+						<div class="block-1" onclick="roadmap(1);"> Planning </div>
+						<div class="block-2" onclick="roadmap(2);"> Designing </div>
+						<div class="block-3" onclick="roadmap(3);"> Coding </div>
+						<div class="block-4" onclick="roadmap(4);"> Testing </div>
+					</div>
+				</div>
+				<div class="col right">
+					<div class="bubble">
+						<p id="roadmapContent">
+							<i>Planning</i>
+							<br />
+								This is the step where we plan everything before we start designing. The client is usually involved in 80% of the planning stage.
+						</p>
+					</div>
+				</div>
+				<div class="clear"></div>
+		</div>
 	</div>
 
 	<div id="pinPoint-3" class="layer-5">
@@ -279,60 +299,6 @@
 			</div>
 			<div class="divider"></div>
 		</div>
-		<!--<div class="portfolio">
-			<div class="sq left orange">
-				<a target="_blank" href="https://hristozafirov.github.io/HZ-Project/">
-					<h2> project HZ </h2>
-				</a>
-			</div>
-			<div class="sq left teal">
-				<a target="_blank" href="https://hristozafirov.github.io/Eldridge/">
-					<h2> Eldridge </h2>
-				</a>
-			</div>
-			<div class="sq left coral">
-				<a target="_blank" href="https://hristozafirov.github.io/Tahan-project/">
-					<h2> Бориславски тахан </h2>
-				</a>
-			</div>
-			<div class="sq left purple">
-				<a target="_blank" href="https://hristozafirov.github.io/Wideflash/">
-					<h2> Wideflash </h2>
-				</a>
-			</div>
-			<div class="sq left grey">
-				<a target="_blank" href="https://hristozafirov.github.io/Menu-Design/">
-					<h2> Menu </h2>
-				</a>
-			</div>
-			<div class="sq left pink">
-				<a target="_blank" href="https://hristozafirov.github.io/Ocean-Sky/">
-					<h2> Ocean Sky </h2>
-				</a>
-			</div>
-			<div class="sq left yellowgreen">
-				<a target="_blank" href="https://hristozafirov.github.io/Felicity/">
-					<h2> Felicity </h2>
-				</a>
-			</div>
-			<div class="sq left dodgerblue">
-				<a target="_blank" href="https://hristozafirov.github.io/Andre/">
-					<h2> Andre </h2>
-				</a>
-			</div>
-			<div class="sq left red">
-				<a target="_blank" href="https://hristozafirov.github.io/Homework-project/">
-					<h2> Homework project </h2>
-				</a>
-			</div>
-			<div class="sq left green">
-				<a target="_blank" href="https://hristozafirov.github.io/MyAnimations-/">
-					<h2> My animations </h2>
-				</a>
-			</div>
-			<div class="clear"></div>
-		</div>
-		-->
 	</div>
 
 	<div id="pinPoint-4" class="layer-6 parallax">
