--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 		<div class="roadmap">
 				<div class="col left">
 					<div class="pyramid">
-						<div class="block-1" onclick="roadmap(1);"> Planning </div>
-						<div class="block-2" onclick="roadmap(2);"> Designing </div>
-						<div class="block-3" onclick="roadmap(3);"> Coding </div>
-						<div class="block-4" onclick="roadmap(4);"> Testing </div>
+						<div class="block-1" onclick="roadmap(1);"> 1. Planning </div>
+						<div class="block-2" onclick="roadmap(2);"> 2. Designing </div>
+						<div class="block-3" onclick="roadmap(3);"> 3. Coding </div>
+						<div class="block-4" onclick="roadmap(4);"> 4. Testing </div>
 					</div>
 				</div>
 				<div class="col right">
