--- a/index.html
+++ b/index.html
@@ -147,21 +147,58 @@
 		<h1>Simple roadmap for every website</h1>
 		<div class="roadmap">
 				<div class="col left">
+					<div class="dot-wrapper">
+						<div id="dot1" class="dot" onclick="roadmap(1);"></div>
+						<div id="dot2" class="dot" onclick="roadmap(2);"></div>
+						<div id="dot3" class="dot" onclick="roadmap(3);"></div>
+						<div id="dot4" class="dot" onclick="roadmap(4);"></div>
+					</div>
+					<!--
 					<div class="pyramid">
 						<div class="block-1" onclick="roadmap(1);"> 1. Planning </div>
 						<div class="block-2" onclick="roadmap(2);"> 2. Designing </div>
 						<div class="block-3" onclick="roadmap(3);"> 3. Coding </div>
 						<div class="block-4" onclick="roadmap(4);"> 4. Testing </div>
 					</div>
+				-->
 				</div>
 				<div class="col right">
-					<div class="bubble">
+					<div id="bubb1">
+					<div class="bubble"></div>
+					<div class="bubble2"></div>
 						<p id="roadmapContent">
 							<i>Planning</i>
 							<br />
 								This is the step where we plan everything before we start designing. The client is usually involved in 80% of the planning stage.
 						</p>
-					</div>
+						</div>
+						<div id="bubb2">
+					<div class="bubble"></div>
+					<div class="bubble2"></div>
+						<p id="roadmapContent">
+							<i>Designing</i>
+							<br />
+								During the design process I prepare neat designs taking in consideration the client's requirements and discuss with the client if they have any suggestions for improvement.
+						</p>
+						</div>
+						<div id="bubb3">
+					<div class="bubble"></div>
+					<div class="bubble2"></div>
+						<p id="roadmapContent">
+							<i>Coding</i>
+							<br />
+								In this process I bring the design to life in a series of browser pages using Web programming languages to create a stunning User Interface and User Experience.
+						</p>
+						</div>
+						<div id="bubb4">
+					<div class="bubble"></div>
+					<div class="bubble2"></div>
+						<p id="roadmapContent">
+							<i>Testing</i>
+							<br />
+								This is the step where the final product is being tested entirely for any bugs and issues that may impact the UX in any way possible. 
+						</p>
+						</div>
 				</div>
 				<div class="clear"></div>
 		</div>
@@ -223,42 +260,6 @@
 				<div class="clear"></div>
 			</div>
 			<div class="row">
-				<div class="col right">
-					<a target="_blank" href="https://hristozafirov.github.io/Menu-Design/">
-					<img src="images/Menu.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>This is my second one-page design project which is pretty simple, elegant and good looking with overlapping and pseudo elements.</p>
-						</div>
-							<h2>MENU</h2>
-					</div>
-				</a>
-				</div>
-				<div class="col left">
-					<a target="_blank" href="https://hristozafirov.github.io/Wideflash/">
-					<img src="images/Wideflash.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>Now this is a bad coded project that I've made during a course in which I was supposed to teach others what to and not to do. I know it's not working as intended but I've also learned a lesson or two during this project and I'm thankful for that.</p>
-						</div>
-							<h2>Wideflash</h2>
-					</div>
-				</a>
-				</div>
-				<div class="clear"></div>
-			</div>
-			<div class="row">
-				<div class="col right">
-					<a target="_blank" href="https://hristozafirov.github.io/Homework-project/">
-					<img src="images/homework.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>This project I've made for university purposes during my Web programming course in my 2nd bachelor year. The project is a complete mess but it's one of the largest projects I've got.</p>
-						</div>
-							<h2>Homework project</h2>
-					</div>
-				</a>
-				</div>
 				<div class="col left">
 					<a target="_blank" href="https://hristozafirov.github.io/MyAnimations-/">
 					<img src="images/myanimations5.jpg" />
@@ -270,28 +271,14 @@
 					</div>
 				</a>
 				</div>
-				<div class="clear"></div>
-			</div>
-			<div class="row">
 				<div class="col right">
-					<a target="_blank" href="https://hristozafirov.github.io/Andre/">
-					<img src="images/Andre.jpg" />
+					<a target="_blank" href="https://hristozafirov.github.io/Menu-Design/">
+					<img src="images/Menu.jpg" />
 					<div class="col-bg">
 						<div>
-							<p>My first ever large project which I've made during my "Beginner's PHP & MySQL course" at Plovdiv Academy. During that course I've found out that design and frontend is my thing and although there is no PHP in here I'm proud of this so called "project" mess.</p>
+							<p>This is my second one-page design project which is pretty simple, elegant and good looking with overlapping and pseudo elements.</p>
 						</div>
-							<h2>Andre</h2>
-					</div>
-				</a>
-				</div>
-				<div class="col left">
-					<a target="_blank" href="https://hristozafirov.github.io/Felicity/">
-					<img src="images/Felicity.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>I've got a thing about home design and interior and I've made this project with a lot of passion. I've tried making a pure CSS parallax here for the very first time. And I'm glad it worked in some way.</p>
-						</div>
-						<h2>Felicity</h2>
+							<h2>MENU</h2>
 					</div>
 				</a>
 				</div>
