Fixed some projects

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 	<div id="pinPoint-3" class="layer-5">
 		<h1>PORTFOLIO</h1>
-		<h2 class="warning"> Warning! All of my projects are NON-RESPONSIVE and are made for laptop size viewport! </h2>
+		<h2 class="warning"> Warning! This portfolio is fully reposponsive but most of the projects are not!</h2>
 
 		<div class="portfolio">
 			<div class="row">
@@ -217,7 +217,7 @@
 						<div>
 							<p>A project I have made for university purposes, I have trained JavaScript here and although I've learned a lot since then and I would never code it the same way I'm still happy with the results. </p>
 						</div>
-							<h2>Project HZ</h2>
+							<h2>1440px Project</h2>
 					</div>
 				</a>
 				</div>
@@ -228,7 +228,7 @@
 						<div>
 							<p>I've made this project to use it some day when my father is ready to publish a website about his business. Incomplete.</p>
 						</div>
-							<h2>Borislavski Tahan</h2>
+							<h2>90% Responsive</h2>
 					</div>
 				</a>
 				</div>
@@ -242,18 +242,18 @@
 						<div>
 							<p>This is my first ever one-page design project in which I've included some new 3D stuff which I've learned during it.</p>
 						</div>
-							<h2>Eldridge</h2>
+							<h2>2560px Project</h2>
 					</div>
 				</a>
 				</div>
 				<div class="col left">
-					<a target="_blank" href="https://hristozafirov.github.io/Ocean-Sky/">
-					<img src="images/Oceansky.jpg" />
+					<a target="_blank" href="https://hristozafirov.github.io/GradientProject/">
+					<img src="images/gradient.jpg" />
 					<div class="col-bg">
 						<div>
-							<p>My first parallax effect ever, although it's quite simple and really bad coded it still works and I'm proud of it.</p>
+							<p id="lowerr">My first project fully coded CSS in SASS. I've tried making a gradient design. Overall I think it looks good and it's one of my fine projects.</p>
 						</div>
-							<h2>OceanSky</h2>
+							<h2>Laptop & 2560px Responsive</h2>
 					</div>
 				</a>
 				</div>
@@ -278,7 +278,7 @@
 						<div>
 							<p>This is my second one-page design project which is pretty simple, elegant and good looking with overlapping and pseudo elements.</p>
 						</div>
-							<h2>MENU</h2>
+							<h2>MENU - fully responsive</h2>
 					</div>
 				</a>
 				</div>
