--- a/index.html
+++ b/index.html
@@ -208,83 +208,73 @@
 		<h1>PORTFOLIO</h1>
 		<h2 class="warning"> Warning! This portfolio is fully reposponsive but most of the projects are not!</h2>
 
-		<div class="portfolio">
-			<div class="row">
-				<div class="col right">
-					<a target="_blank" href="https://hristozafirov.github.io/HZ-Project/">
-					<img src="images/projecthz.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>A project I have made for university purposes, I have trained JavaScript here and although I've learned a lot since then and I would never code it the same way I'm still happy with the results. </p>
-						</div>
-							<h2>1440px Project</h2>
+		<div class="flex">
+			<div class="box">
+				<img src="images/projecthz.jpg" />
+				<h2> 1440px Project </h2>
+				<a href="https://hristozafirov.github.io/HZ-Project/" target="_blank">
+					<div>
+						<p>
+							A project I have made for university purposes, I have trained JavaScript here and although I've learned a lot since then and I would never code it the same way.
+						</p>
 					</div>
 				</a>
-				</div>
-				<div class="col left">
-					<a target="_blank" href="https://hristozafirov.github.io/Tahan-project/">
-					<img src="images/tahan2.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>I've made this project to use it some day when my father is ready to publish a website about his business. Incomplete.</p>
-						</div>
-							<h2>90% Responsive</h2>
-					</div>
-				</a>
-				</div>
-				<div class="clear"></div>
 			</div>
-			<div class="row">
-				<div class="col right">
-					<a target="_blank" href="https://hristozafirov.github.io/Eldridge/">
-					<img src="images/Eldridge.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>This is my first ever one-page design project in which I've included some new 3D stuff which I've learned during it.</p>
-						</div>
-							<h2>2560px Project</h2>
+			<div class="box">
+				<img src="images/tahan2.jpg" />
+				<h2> 90% Responsive </h2>
+				<a href="https://hristozafirov.github.io/Tahan-project/" target="_blank">
+					<div>
+						<p>
+							I've made this project to use it some day when my father is ready to publish a website about his business. Incomplete.
+						</p>
 					</div>
 				</a>
-				</div>
-				<div class="col left">
-					<a target="_blank" href="https://hristozafirov.github.io/GradientProject/">
-					<img src="images/gradient.jpg" />
-					<div class="col-bg">
-						<div>
-							<p id="lowerr">My first project fully coded CSS in SASS. I've tried making a gradient design. Overall I think it looks good and it's one of my fine projects.</p>
-						</div>
-							<h2>Laptop & 2560px Responsive</h2>
-					</div>
-				</a>
-				</div>
-				<div class="clear"></div>
 			</div>
-			<div class="row">
-				<div class="col left">
-					<a target="_blank" href="https://hristozafirov.github.io/MyAnimations-/">
-					<img src="images/myanimations5.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>This is my cheatsheet with some cool (I think) hover effects that I've coded myself and I keep updating it with some new effects from time to time when I get inspired.</p>
-						</div>
-							<h2>My animations</h2>
+			<div class="box">
+				<img src="images/Eldridge.jpg" />
+				<h2> 2560px Project </h2>
+				<a href="https://hristozafirov.github.io/Eldridge/" target="_blank">
+					<div>
+						<p>
+							This is my first ever one-page design project in which I've included some new 3D stuff which I've learned during it.
+						</p>
 					</div>
 				</a>
-				</div>
-				<div class="col right">
-					<a target="_blank" href="https://hristozafirov.github.io/Menu-Design/">
-					<img src="images/Menu.jpg" />
-					<div class="col-bg">
-						<div>
-							<p>This is my second one-page design project which is pretty simple, elegant and good looking with overlapping and pseudo elements.</p>
-						</div>
-							<h2>MENU - fully responsive</h2>
-					</div>
-				</a>
-				</div>
-				<div class="clear"></div>
 			</div>
-			<div class="divider"></div>
+			<div class="box">
+				<img src="images/gradient.jpg" />
+				<h2> Laptop & 2560px Responsive </h2>
+				<a href="https://hristozafirov.github.io/GradientProject/" target="_blank">
+					<div>
+						<p>
+							My first project fully coded CSS in SASS. I've tried making a gradient design. Overall I think it looks good and it's one of my fine projects.
+						</p>
+					</div>
+				</a>
+			</div>
+			<div class="box">
+				<img src="images/myanimations5.jpg" />
+				<h2> My animations </h2>
+				<a href="https://hristozafirov.github.io/MyAnimations-/" target="_blank">
+					<div>
+						<p>
+							This is my cheatsheet with some cool (I think) hover effects that I've coded myself and I keep updating it with some new effects from time to time when I get inspired.
+						</p>
+					</div>
+				</a>
+			</div>
+			<div class="box">
+				<img src="images/Menu.jpg" />
+				<h2> MENU - fully responsive </h2>
+				<a href="https://hristozafirov.github.io/Menu-Design/" target="_blank">
+					<div>
+						<p>
+							This is my second one-page design project which is pretty 	simple, elegant and good looking with overlapping and pseudo 	elements.
+						</p>
+					</div>
+				</a>
+			</div>
 		</div>
 	</div>
 
