--- a/index.html
+++ b/index.html
@@ -153,14 +153,6 @@
 						<div id="dot3" class="dot" onclick="roadmap(3);"></div>
 						<div id="dot4" class="dot" onclick="roadmap(4);"></div>
 					</div>
-					<!--
-					<div class="pyramid">
-						<div class="block-1" onclick="roadmap(1);"> 1. Planning </div>
-						<div class="block-2" onclick="roadmap(2);"> 2. Designing </div>
-						<div class="block-3" onclick="roadmap(3);"> 3. Coding </div>
-						<div class="block-4" onclick="roadmap(4);"> 4. Testing </div>
-					</div>
-				-->
 				</div>
 				<div class="col right">
 					<div id="bubb1">
@@ -244,7 +236,7 @@
 			</div>
 			<div class="box">
 				<img src="images/gradient.jpg" />
-				<h2> Laptop & 2560px Responsive </h2>
+				<h2> Fully Responsive </h2>
 				<a href="https://hristozafirov.github.io/GradientProject/" target="_blank">
 					<div>
 						<p>
@@ -266,7 +258,7 @@
 			</div>
 			<div class="box">
 				<img src="images/Menu.jpg" />
-				<h2> MENU - fully responsive </h2>
+				<h2> Fully Responsive MENU </h2>
 				<a href="https://hristozafirov.github.io/Menu-Design/" target="_blank">
 					<div>
 						<p>
