replaced one project

--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
 		<div class="flex">
 			<div class="box">
 				<img src="images/projecthz.jpg" />
-				<h2> 1440px Project </h2>
-				<a href="https://hristozafirov.github.io/HZ-Project/" target="_blank">
+				<h2> Landing Page Designs </h2>
+				<a href="https://hristozafirov.github.io/LandingPages/" target="_blank">
 					<div>
 						<p>
-							A project I have made for university purposes, I have trained JavaScript here and although I've learned a lot since then and I would never code it the same way.
+							Some landing page designs I've made on Photoshop lately, implemented with codes. I'm updating this page regularly.
 						</p>
 					</div>
 				</a>
